--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "reservahotelera",
+  "homepage": "https://psc88.github.io/reservaHotelera",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,12 +8,16 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.3",
-    "react-scripts": "4.0.3"
+    "react-scripts": "4.0.3",
+    "yarn": "^1.22.11"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
